--- a/escalade-naturelle/Normandie.html
+++ b/escalade-naturelle/Normandie.html
@@ -182,7 +182,19 @@
             <p>&copy; 2024 Spots d'escalade en France</p>
         </div>
     </footer>
-
+    <script>
+        const lightMode = document.getElementById('lightmode');
+    
+    lightMode.addEventListener('click', function () {
+        const currentTheme = document.documentElement.getAttribute('data-bs-theme')
+        
+        if (currentTheme === 'dark') {
+            document.documentElement.setAttribute('data-bs-theme', 'none')
+        } else {
+            document.documentElement.setAttribute('data-bs-theme', 'dark')
+        }
+    })
+    </script>
 </body>
 
 </html>
