--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/HomePage.html">Climbing Spots</a>
+                <a class="navbar-brand" href="/index.html">Climbing Spots</a>
                 <!-- <button class="btn btn-light me-5 order-lg-2" aria-label="Basculer le mode lumineux"><img id="lightmode"
                         src="/moon.png" alt="Bouton mode sombre"></button> -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-5">
                         <li class="nav-item">
-                            <a class="nav-link" id="link" href="/HomePage.html">Accueil</a>
+                            <a class="nav-link" id="link" href="/index.html">Accueil</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
