--- a/escalade-naturelle/PaysdelaLoire.html
+++ b/escalade-naturelle/PaysdelaLoire.html
@@ -19,7 +19,8 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/index.html">Climbing Spots</a>
-                <!-- <button class="btn btn-light me-5 order-lg-2"><img id="lightmode" src="/moon.png" alt="bouton light mode"></button> -->
+                <button class="btn btn-light me-5 order-lg-2"><img id="lightmode" src="/moon.png"
+                        alt="bouton light mode"></button>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -35,9 +36,9 @@
                                 Escalade naturelle
                             </a>
                             <ul class="dropdown-menu bg-success-subtle" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="/escalade naturelle/PaysdelaLoire.html">Pays de la
+                                <li><a class="dropdown-item" href="/escalade-naturelle/PaysdelaLoire.html">Pays de la
                                         Loire</a></li>
-                                <li><a class="dropdown-item" href="/escalade naturelle//Normandie.html">Normandie</a>
+                                <li><a class="dropdown-item" href="/escalade-naturelle//Normandie.html">Normandie</a>
                                 </li>
                                 <li><a class="dropdown-item" href="#">Bretagne</a></li>
                             </ul>
