--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/index.html">Climbing Spots</a>
-                <!-- <button class="btn btn-light me-5 order-lg-2" aria-label="Basculer le mode lumineux"><img id="lightmode"
-                        src="/moon.png" alt="Bouton mode sombre"></button> -->
+                <button class="btn btn-light me-5 order-lg-2"><img id="lightmode" src="/moon.png"
+                        alt="bouton light mode"></button>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -38,13 +38,13 @@
                             <ul class="dropdown-menu bg-success-subtle" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="/escalade-naturelle/PaysdelaLoire.html">Pays de la
                                         Loire</a></li>
-                                <li><a class="dropdown-item" href="/escalade-naturelle/Normandie.html">Normandie</a>
+                                <li><a class="dropdown-item" href="/escalade-naturelle//Normandie.html">Normandie</a>
                                 </li>
                                 <li><a class="dropdown-item" href="#">Bretagne</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button"
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Escalade en bloc intérieur
                             </a>
