--- a/escalade-naturelle/Normandie.html
+++ b/escalade-naturelle/Normandie.html
@@ -18,8 +18,8 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/index.html">Climbing Spots</a>
-                <button class="btn btn-light me-5 order-lg-2"><img id="lightmode" src="/moon.png"
+                <a class="navbar-brand" href="index.html">Climbing Spots</a>
+                <button class="btn btn-light me-5 order-lg-2"><img id="lightmode" src="moon.png"
                         alt="bouton light mode"></button>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-5">
                         <li class="nav-item">
-                            <a class="nav-link" id="link" href="/index.html">Accueil</a>
+                            <a class="nav-link" id="link" href="index.html">Accueil</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -36,9 +36,9 @@
                                 Escalade naturelle
                             </a>
                             <ul class="dropdown-menu bg-success-subtle" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="/escalade-naturelle/PaysdelaLoire.html">Pays de la
+                                <li><a class="dropdown-item" href="escalade-naturelle/PaysdelaLoire.html">Pays de la
                                         Loire</a></li>
-                                <li><a class="dropdown-item" href="/escalade-naturelle//Normandie.html">Normandie</a>
+                                <li><a class="dropdown-item" href="escalade-naturelle//Normandie.html">Normandie</a>
                                 </li>
                                 <li><a class="dropdown-item" href="#">Bretagne</a></li>
                             </ul>
@@ -49,7 +49,7 @@
                                 Escalade en bloc intérieur
                             </a>
                             <ul class="dropdown-menu bg-warning-subtle" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="/bloc/Paysdelaloire.html">Pays de la Loire</a></li>
+                                <li><a class="dropdown-item" href="bloc/Paysdelaloire.html">Pays de la Loire</a></li>
                                 <li><a class="dropdown-item" href="Normandie.html">Normandie</a></li>
                                 <li><a class="dropdown-item" href="#">Bretagne</a></li>
                             </ul>
