--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                                 Escalade naturelle
                             </a>
                             <ul class="dropdown-menu bg-success-subtle" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="escalade-naturelle/PaysdelaLoire.html">Pays de la
+                                <li><a class="dropdown-item" href="escalade-naturelle/paysdelaloire.html">Pays de la
                                         Loire</a></li>
-                                <li><a class="dropdown-item" href="escalade-naturelle//Normandie.html">Normandie</a>
+                                <li><a class="dropdown-item" href="escalade-naturelle/normandie.html">Normandie</a>
                                 </li>
                                 <li><a class="dropdown-item" href="#">Bretagne</a></li>
                             </ul>
@@ -49,8 +49,8 @@
                                 Escalade en bloc intérieur
                             </a>
                             <ul class="dropdown-menu bg-warning-subtle" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="bloc/Paysdelaloire.html">Pays de la Loire</a></li>
-                                <li><a class="dropdown-item" href="Normandie.html">Normandie</a></li>
+                                <li><a class="dropdown-item" href="bloc/paysdelaloirebloc.html">Pays de la Loire</a></li>
+                                <li><a class="dropdown-item" href="#">Normandie</a></li>
                                 <li><a class="dropdown-item" href="#">Bretagne</a></li>
                             </ul>
                         </li>
