--- a/bloc/paysdelaloirebloc.html
+++ b/bloc/paysdelaloirebloc.html
@@ -36,9 +36,9 @@
                                 Escalade naturelle
                             </a>
                             <ul class="dropdown-menu bg-success-subtle" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="escalade-naturelle/paysdelaloire.html">Pays de la
+                                <li><a class="dropdown-item" href="escaladenaturelle/paysdelaloire.html">Pays de la
                                         Loire</a></li>
-                                <li><a class="dropdown-item" href="escalade-naturelle/normandie.html">Normandie</a>
+                                <li><a class="dropdown-item" href="escaladenaturelle/normandie.html">Normandie</a>
                                 </li>
                                 <li><a class="dropdown-item" href="#">Bretagne</a></li>
                             </ul>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="text-center">
-                        <img src="/escalade naturelle/SaintLéonard.jpg" class="d-block mx-auto card"
+                        <img src="SaintLéonard.jpg" class="d-block mx-auto card"
                             alt="...">
                     </div>
                     <div class="text-center mt-2 ">
