--- a/index.html
+++ b/index.html
@@ -36,10 +36,8 @@
                                 Escalade naturelle
                             </a>
                             <ul class="dropdown-menu bg-success-subtle" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="escaladenaturelle/paysdelaloire.html">Pays de la
-                                        Loire</a></li>
-                                <li><a class="dropdown-item" href="escaladenaturelle/normandie.html">Normandie</a>
-                                </li>
+                                <li><a class="dropdown-item" href="./escaladenaturelle/paysdelaloire.html">Pays de la Loire</a></li>
+                                <li><a class="dropdown-item" href="./escaladenaturelle/normandie.html">Normandie</a></li>
                                 <li><a class="dropdown-item" href="#">Bretagne</a></li>
                             </ul>
                         </li>
