--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-5">
                         <li class="nav-item">
-                            <a class="nav-link" id="link" href="index.html">Accueil</a>
+                            <a class="nav-link" id="link" href="./index.html">Accueil</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
