--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">Climbing Spots</a>
-                <button class="btn btn-light me-5 order-lg-2"><img id="lightmode" src="moon.png"
-                        alt="bouton light mode"></button>
+                <button class="btn btn-light me-5 order-lg-2"><img id="lightmode" src="moon.png" alt="bouton light mode"></button>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -28,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-5">
                         <li class="nav-item">
-                            <a class="nav-link" id="link" href="./index.html">Accueil</a>
+                            <a class="nav-link" href="index.html">Accueil</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -36,17 +35,17 @@
                                 Escalade naturelle
                             </a>
                             <ul class="dropdown-menu bg-success-subtle" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="./escaladenaturelle/paysdelaloire.html">Pays de la Loire</a></li>
-                                <li><a class="dropdown-item" href="./escaladenaturelle/normandie.html">Normandie</a></li>
+                                <li><a class="dropdown-item" href="escaladenaturelle/paysdelaloire.html">Pays de la Loire</a></li>
+                                <li><a class="dropdown-item" href="escaladenaturelle/normandie.html">Normandie</a></li>
                                 <li><a class="dropdown-item" href="#">Bretagne</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBloc" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Escalade en bloc intérieur
                             </a>
-                            <ul class="dropdown-menu bg-warning-subtle" aria-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu bg-warning-subtle" aria-labelledby="navbarDropdownBloc">
                                 <li><a class="dropdown-item" href="bloc/paysdelaloirebloc.html">Pays de la Loire</a></li>
                                 <li><a class="dropdown-item" href="#">Normandie</a></li>
                                 <li><a class="dropdown-item" href="#">Bretagne</a></li>
