--- a/bloc/paysdelaloirebloc.html
+++ b/bloc/paysdelaloirebloc.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">Climbing Spots</a>
-                <button class="btn btn-light me-5 order-lg-2"><img id="lightmode" src="../moon.png" alt="bouton light mode"></button>
+                <button id="lightmode"  class="btn btn-light me-5 order-lg-2"><img src="../moon.png" alt="bouton light mode"></button>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
