--- a/escaladenaturelle/paysdelaloire.html
+++ b/escaladenaturelle/paysdelaloire.html
@@ -19,7 +19,13 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">Climbing Spots</a>
-                <button id="lightmode" class="btn btn-light me-5 order-lg-2"><img src="../moon.png" alt="bouton light mode"></button>
+                <button id="lightmode" class="btn btn-light me-5 order-lg-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                        <path
+                            d="M14.768 3.96v.001l-.002-.005a9.08 9.08 0 0 0-.218-.779c-.13-.394.21-.8.602-.67.29.096.575.205.855.328l.01.005A10.002 10.002 0 0 1 12 22a10.002 10.002 0 0 1-9.162-5.985l-.004-.01a9.722 9.722 0 0 1-.329-.855c-.13-.392.277-.732.67-.602.257.084.517.157.78.218l.004.002A9 9 0 0 0 14.999 6a9.09 9.09 0 0 0-.231-2.04ZM16.5 6c0 5.799-4.701 10.5-10.5 10.5-.426 0-.847-.026-1.26-.075A8.5 8.5 0 1 0 16.425 4.74c.05.413.075.833.075 1.259Z">
+                        </path>
+                    </svg>
+                </button>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -46,7 +52,8 @@
                                 Escalade en bloc intérieur
                             </a>
                             <ul class="dropdown-menu bg-warning-subtle" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="../bloc/paysdelaloirebloc.html">Pays de la Loire</a></li>
+                                <li><a class="dropdown-item" href="../bloc/paysdelaloirebloc.html">Pays de la Loire</a>
+                                </li>
                                 <li><a class="dropdown-item" href="#">Normandie</a></li>
                                 <li><a class="dropdown-item" href="#">Bretagne</a></li>
                             </ul>
